--- a/assets/css/editor.css
+++ b/assets/css/editor.css
@@ -49,7 +49,7 @@ td, th {
 
 /* - Typography Basics - from Gridless http://thatcoolguy.github.com/gridless-boilerplate/ */
 h1, h2, h3, h4, h5, h6 {
-  color: #666;
+  color: #666666;
   font-size: 1em;
   font-weight: normal;
   margin: 0 0 .5em; }
@@ -94,6 +94,7 @@ a {
   font-weight: 800;
   padding: 0.1% 1.5%;
   border-radius: 5px;
+  text-align: center;
   text-transform: uppercase;
   font-size: .9em;
   -webkit-transition: all 0.3s;
