--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -241,16 +241,16 @@ blockquote {
 /* ------------------------------------
  Layout & General
 -------------------------------------*/
-#header-inner, #page-inner, #footer-inner {
+#header-inner, #page-inner, #post-inner, #footer-inner {
   *zoom: 1;
   max-width: 1180px;
   margin-left: auto;
   margin-right: auto;
   position: relative; }
-  #header-inner:before, #header-inner:after, #page-inner:before, #page-inner:after, #footer-inner:before, #footer-inner:after {
+  #header-inner:before, #header-inner:after, #page-inner:before, #page-inner:after, #post-inner:before, #post-inner:after, #footer-inner:before, #footer-inner:after {
     content: " ";
     display: table; }
-  #header-inner:after, #page-inner:after, #footer-inner:after {
+  #header-inner:after, #page-inner:after, #post-inner:after, #footer-inner:after {
     clear: both; }
 
 body {
