--- a/assets/css/front.css
+++ b/assets/css/front.css
@@ -80,7 +80,7 @@ header {
   border-radius: none;
   box-shadow: none; }
 
-h1 {
+h1, nav.tabs {
   display: none; }
 
 #main-content {
@@ -126,7 +126,7 @@ h1 {
       text-transform: uppercase; }
     #main-content > div li {
       clear: both;
-      margin: 0 0 10px;
+      margin: 0 0 5px;
       overflow: hidden; }
     #main-content > div .more-link {
       text-align: center; }
@@ -141,7 +141,8 @@ h1 {
           top: 2px;
           text-transform: lowercase; }
     #main-content > div + div h2 {
-      color: #fff; }
+      color: #fff;
+      margin-bottom: 8px; }
       #main-content > div + div h2:before {
         color: #000;
         content: "b";
@@ -149,15 +150,61 @@ h1 {
         margin-right: 10px;
         position: relative;
         top: 3px; }
+    #main-content > div + div li {
+      margin-bottom: 8px; }
+  #main-content h3 {
+    margin-bottom: 0; }
 
-.views-field-field-date-1 {
-  background-color: #000;
-  float: left;
-  width: 23%;
-  padding: 10px;
-  border-radius: 5px 0 0 6px; }
-  .views-field-field-date-1 .field-content {
+#main-content .events h2 {
+  margin-bottom: 10px; }
+
+.events {
+  left: -3px;
+  position: relative; }
+  .events li {
     background-color: #fff;
     border-radius: 8px;
-    padding: 5px;
+    line-height: 1.4em;
+    padding: 0 3%;
+    text-transform: uppercase; }
+    .events li > * {
+      clear: right;
+      float: right; }
+    .events li h3 {
+      font-size: 1.35em;
+      margin-top: 10px; }
+    .events li > span {
+      line-height: 1em; }
+      .events li > span a {
+        color: #909090; }
+        .events li > span a:hover {
+          color: #4b7c95; }
+    .events li .views-field-field-time {
+      border-right: 2px solid;
+      clear: none;
+      margin-right: 5px;
+      padding-right: 5px; }
+
+.events .views-field-field-date-1 {
+  background-color: #000;
+  border-radius: 5px 0 0 6px;
+  float: left;
+  line-height: 1.6em;
+  padding: 10px;
+  margin-left: -3.4%;
+  text-transform: uppercase;
+  width: 23%; }
+  .events .views-field-field-date-1 .field-content {
+    background-color: #fff;
+    border-radius: 8px;
+    padding: 4px 4px 0;
     text-align: center; }
+  .events .views-field-field-date-1 .month {
+    font-size: 1em; }
+  .events .views-field-field-date-1 .day {
+    color: #909090;
+    font-size: 2em; }
+
+.location {
+  font-size: 1.4em;
+  margin-bottom: 2px; }
