--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -85,6 +85,9 @@ input[type="text"], input[type="password"], input[type="email"] {
   input[type="text"]:focus:-ms-input-placeholder, input[type="password"]:focus:-ms-input-placeholder, input[type="email"]:focus:-ms-input-placeholder {
     color: #ccc; }
 
+#main-content input[type="text"], #main-content input[type="password"], #main-content input[type="email"] {
+  background-color: #f2f2f2; }
+
 input[type="submit"] {
   background: #3d3d3d;
   border: none;
@@ -102,7 +105,8 @@ textarea {
   background-color: #f2f2f2;
   border: none;
   border-radius: 4px 4px 0 0;
-  min-height: 150px; }
+  min-height: 150px;
+  padding: 2%; }
 
 #page input[type="submit"] {
   background-color: #aaa;
@@ -415,58 +419,14 @@ header, footer {
       .page-news #main-content .views-field-body h2 a:hover {
         color: #7f7f7f; }
 
-/* Tour */
-.page-events h1 {
-  background: none;
-  color: #4b7c95;
-  font-size: 1.7em;
-  margin-bottom: 10px;
-  text-transform: uppercase; }
-  .page-events h1:before {
-    color: #000;
-    content: "b";
-    font: .8em "icomoon";
-    margin-right: 1%;
-    text-transform: lowercase; }
-.page-events #main-content {
-  padding-top: 0; }
-  .page-events #main-content ul {
-    margin: 0;
-    padding: 0;
-    list-style: none; }
-  .page-events #main-content li {
-    border-bottom: 3px solid #dbe5ea;
-    overflow: hidden;
-    padding-bottom: 15px;
-    margin-bottom: 20px; }
-  .page-events #main-content p {
-    margin: 0; }
-.page-events .views-field-field-date-2 {
-  background-color: #4b7c95;
-  border-radius: 7px;
-  color: #000;
-  float: left;
-  margin-right: 3%;
-  padding: 2% 1% 1.5%; }
-  .page-events .views-field-field-date-2 span {
-    display: block;
-    font-size: 1.4em;
-    line-height: .6em;
-    text-align: center;
-    text-transform: uppercase; }
-  .page-events .views-field-field-date-2 .day {
-    color: #fff;
-    font: 47px 'nexa_lightregular', sans-serif; }
-.page-events .views-field-title, .page-events .views-field-body {
-  float: left;
-  width: 54%; }
-.page-events .views-field-body {
-  color: #4b7c95;
-  line-height: 1.7em; }
-.page-events .views-field-field-ticket-link {
+/* Tour Node */
+.group_event_info {
   float: right;
-  width: 25%; }
-.page-events .buy-link {
+  border: 2px solid #ccc;
+  padding: 3%;
+  margin: 0 0 2% 2%; }
+
+.group_event_links .performance-event-timed-link, .group_event_links .meet-greet a {
   background-color: #aaa;
   color: #fff;
   display: block;
@@ -481,10 +441,30 @@ header, footer {
   -moz-transition: all 0.3s;
   transition: all 0.3s;
   background-color: #000;
-  color: #fff; }
-  .page-events .buy-link:hover {
+  float: left;
+  margin-bottom: 10px;
+  padding: 1% 3%;
+  width: 49%; }
+  .group_event_links .performance-event-timed-link:hover, .group_event_links .meet-greet a:hover {
     background-color: #b6b6b6;
     text-decoration: none; }
+  .group_event_links .performance-event-timed-link:hover, .group_event_links .meet-greet a:hover {
+    background-color: #5f5f5f; }
+.group_event_links .meet-greet a {
+  background-color: #4b7c95;
+  margin-left: 2%; }
+  .group_event_links .meet-greet a:hover {
+    background-color: #5f5f5f; }
+
+/* Meet & Greet Form */
+.meet-greets h2 {
+  font-size: 1em; }
+
+.node-meet_greet-form input[type="submit"] {
+  float: left;
+  margin: 20px 0; }
+.node-meet_greet-form input[type="submit"]:first-child {
+  float: right; }
 
 /* ------------------------------------
  Footer
