--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -62,6 +62,11 @@ input[type="text"], input[type="password"], input[type="email"] {
   &:focus::-moz-placeholder { color:#ccc; } /* firefox 19+ */
   &:focus:-ms-input-placeholder { color:#ccc; } /* ie */
 }
+#main-content {
+  input[type="text"], input[type="password"], input[type="email"] {
+    background-color: #f2f2f2;
+  }
+}
 input[type="submit"] {
   background: #3d3d3d;
   border: none;
@@ -81,6 +86,7 @@ textarea {
   border: none;
   border-radius: 4px 4px 0 0;
   min-height: 150px;
+  padding: 2%;
 }
 #page input[type="submit"] {
   @include btn;
@@ -278,74 +284,44 @@ header, footer {
     }
   }
 }
-/* Tour */
-.page-events {
-  h1 {
-    background: none;
-    color: #4b7c95;
-    font-size: 1.7em;
-    margin-bottom: 10px;
-    text-transform: uppercase;
-    &:before {
-      color: #000;
-      content: "b";
-      font: .8em "icomoon";
-      margin-right: 1%;
-      text-transform: lowercase;
-    }
-  }
-  #main-content {
-    padding-top: 0;
-    ul {
-      margin: 0;
-      padding: 0;
-      list-style: none;
-    }
-    li {
-      border-bottom: 3px solid #dbe5ea;
-      overflow: hidden;
-      padding-bottom: 15px;
-      margin-bottom: 20px;
-    }
-    p {
-      margin: 0;
-    }
-  }
-  .views-field-field-date-2 {
-    background-color: #4b7c95;
-    border-radius: 7px;
-    color: #000;
-    float: left;
-    margin-right: 3%;
-    padding: 2% 1% 1.5%;
-    span {
-      display: block;
-      font-size: 1.4em;
-      line-height: .6em;
-      text-align: center;
-      text-transform: uppercase;
-    }
-    .day {
-      color: #fff;
-      font: 47px 'nexa_lightregular', sans-serif;
-    }
-  }
-  .views-field-title,  .views-field-body {
-    float: left;
-    width: 54%;
-  }
-  .views-field-body {
-    color: #4b7c95;
-    line-height: 1.7em;
-  }
-  .views-field-field-ticket-link {
-    float: right;
-    width: 25%;
-  }
-  .buy-link {
+/* Tour Node */
+.group_event_info {
+  float: right;
+  border: 2px solid #ccc;
+  padding: 3%;
+  margin: 0 0 2% 2%;
+}
+.group_event_links {
+  .performance-event-timed-link, .meet-greet a {
     @include btn;
-    background-color: #000;
-    color: #fff;
+    background-color:#000;
+    float: left;
+    margin-bottom: 10px;
+    padding: 1% 3%;
+    width: 49%;
+    &:hover {
+      background-color:#5f5f5f;
+    }
+  }
+  .meet-greet a {
+    background-color: $blue;
+    margin-left: 2%;
+    &:hover {
+      background-color:#5f5f5f;
+    }
+  }
+}
+/* Meet & Greet Form */
+.meet-greets h2 {
+  font-size: 1em;
+}
+.node-meet_greet-form {
+  input[type="submit"] {
+    float: left;
+    margin: 20px 0;
+  }
+  input[type="submit"]:first-child {
+    float: right;
   }
 }
 /* ------------------------------------
